--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "url": "git+https://github.com/stevemao/to-error.git"
   },
   "keywords": [
-    "env",
-    "var",
-    "vars",
-    "throw"
+    "errors",
+    "error"
   ],
   "author": "Steve Mao",
   "license": "MIT",
